# leakguard

./: .gitignore  .leakguard-baseline.json  .leakguardignore  .pre-commit-hooks.yaml  LICENSE  README.md  demo-leak.txt  pyproject.toml
.github/workflows/: leakguard.yml
hooks/: pre-commit
leakguard/: __init__.py  ai.py  baseline.py  cli.py  engine.py  entropy.py  fsscan.py  github_scan.py  history.py  notify.py  patterns.py  proximity.py  report.py  sarif.py  verify.py
rules/: example.rules.json
tests/: test_acceptance.py  test_ai.py  test_baseline.py  test_engine.py  test_entropy.py  test_history.py  test_notify.py  test_proximity.py  test_report.py  test_sarif.py  test_verify.py
