[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leakguard"
version = "0.1.0"
description = "Detect internal identifiers, secrets, and PII before they leak into public artifacts."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Zach B." }]
keywords = ["security", "secrets", "pii", "pre-commit", "disclosure", "scanner", "ci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/Yggdrasil-AI-labs/leakguard"
Issues = "https://github.com/Yggdrasil-AI-labs/leakguard/issues"

[project.scripts]
leakguard = "leakguard.cli:main"

[tool.setuptools]
packages = ["leakguard"]
